# OpenGL_3D_Proj

./: .gitignore  CMakeLists.txt  compile_commands.json  make.ps1
include/: Buffers.h  Renderer.h  Shader.h  Vertex.h  Window.h  main.h
shaders/: fragment.shader  vertex.shader
src/: Buffers.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
